<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Battery Calendar</string>
    <string name="menu_settings">Settings</string>
    <string name="btn_select_account">Configure synchronization</string>
    <string name="txt_sync_status">You can synchronize Battery Calendar with your Google Calendar</string>
    <string name="txt_sync_configured">Google Calendar synchronization is configured to </string>
    <string name="btn_sync_off">Turn off synchronization</string>
    <string name="txt_select_calendar">Select a calendar to synchronize</string>
    <string name="txt_set_device_name">Name this device</string>
    <string name="hint_device_name">Device name</string>
    <string name="btn_new_calendar">Create new calendar</string>
    <string name="title_activity_device_name">DeviceNameActivity</string>
    <string name="charging">Charging</string>
    <string name="plugged">Charging by</string>
    <string name="plugged_ac">AC</string>
    <string name="plugged_usb">USB</string>
    <string name="plugged_wireless">Wireless</string>
    <string name="starting_level">Starting at</string>
    <string name="ending_level">Ending at</string>

</resources>