<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    tools:context=".InformationActivity"
    android:layout_marginLeft="@dimen/activity_side_margin"
    android:layout_marginRight="@dimen/activity_side_margin" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/text_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginBottom="@dimen/info_bottom_margin" />

        <TextView
            android:id="@+id/txt_sync_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_sync_status" />

        <Button
            android:id="@+id/btn_sync_off"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_sync_off" />

        <Button
            android:id="@+id/btn_select_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_select_account" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_select_calendar" />

        <Spinner
            android:id="@+id/spinner_calendars"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@android:layout/simple_spinner_dropdown_item" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_set_device_name" />

        <Button
            android:id="@+id/btn_device_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_device_name" />
    </LinearLayout>

</ScrollView>